--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ need to load. You'll see a lot of <link>s to CSS files for styles and
 
   <!-- Load the page styles. -->
   <link href="css/style.css" rel="stylesheet">
-
+  <link rel="stylesheet" href="http://weloveiconfonts.com/api/?family=brandico" />
   <!--
   jQuery is a common JavaScript library for reading and making changes to the
   Document Object Model (DOM). The DOM is a tree that contains information
