--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@ need to load. You'll see a lot of <link>s to CSS files for styles and
 
   <!-- Load the page styles. -->
   <link href="css/style.css" rel="stylesheet">
+  <link href='https://fonts.googleapis.com/css?family=Cinzel:400,900' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="http://weloveiconfonts.com/api/?family=brandico" />
   <!--
   jQuery is a common JavaScript library for reading and making changes to the
@@ -76,11 +77,6 @@ need to load. You'll see a lot of <link>s to CSS files for styles and
     <div id="mapDiv">
       <h2>Where I've Lived and Worked</h2>
     </div>
-    <div id="lets-connect" class="dark-gray">
-      <h2 class="orange center-text">Let's Connect</h2>
-        <ul id="footerContacts" class="flex-box">
-      </ul>
-    </div>
   </div>
 
   <!--
@@ -129,9 +125,6 @@ need to load. You'll see a lot of <link>s to CSS files for styles and
     }
     if(document.getElementsByClassName('education-entry').length === 0) {
       document.getElementById('education').style.backgroundColor = "black";
-    }
-    if(document.getElementsByClassName('flex-item').length === 0) {
-      document.getElementById('lets-connect').style.backgroundColor = "black";
     }
     if(document.getElementById('map') === null) {
       document.getElementById('mapDiv').style.backgroundColor = "black";
